# beeline

./: Dockerfile  Makefile  README.md  alembic.ini  api.py  dispatcher.py  docker-compose.yaml  gitmodule.py  output.txt  pyproject.toml  replacements.txt  requirements.txt  resdoc_ilya.md  research-doc.md  result.json  runner.py  script.py  storage.py
llm/: generate.py  yandexgpt_without_keys.ipynb
parsers/: parse_python.py  py-parser.py
repo-doc-generator/: package-lock.json  package.json  repo-doc-generator-0.0.1.vsix  tsconfig.json
repo-doc-generator/.vscode-temp/: project_overview.md
repo-doc-generator/src/: extension.ts
visualization/: main.py
visualization/backend/: main.py
visualization/backend/api/routers/: components.py  git_analysis.py
visualization/backend/db/: base.py  config.py  database.py
visualization/backend/services/: gitmodule.py
visualization/frontend/: main.py
