[project]
name = "beeline_case"
version = "1.0"
description = ""
authors = [
    {name = "Keniden",email = "nik.glumov.94@mail.ru"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
