[tool.poetry]
name = "beeline_case"
version = "1.0"
description = ""
authors = ["Keniden <nik.glumov.94@mail.ru>"]
packages = [
    { include = "visualization" },
    { include = "parsers" },
    { include = "ingest" },
    { include = "llm" }
]

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = ">=0.115.12,<0.116.0"
alembic = ">=1.15.2,<2.0.0"
streamlit = ">=1.45.0,<2.0.0"
st-link-analysis = ">=0.3.0,<0.4.0"
networkx = ">=3.4.2,<4.0.0"
plotly = ">=6.0.1,<7.0.0"
pyvis = ">=0.3.2,<0.4.0"
graphviz = ">=0.20.3,<0.21.0"
yandex-cloud-ml-sdk = ">=0.9.1,<0.10.0"
uvicorn = ">=0.27.1,<0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
